--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/django,python,visualstudio
 # Edit at https://www.toptal.com/developers/gitignore?templates=django,python,visualstudio
 
+.vscode/
+
 ### Django ###
 *.log
 *.pot
