--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,26 @@
 asgiref==3.2.10
+astroid==2.4.2
+certifi==2020.6.20
+chardet==3.0.4
 Django==3.1
-pytz==2020.1
-sqlparse==0.3.1
+django-anymail==7.2.1
 django-extensions==3.0.5
 djangorestframework==3.11.1
-django-anymail[mailgun]==7.2.1
+gunicorn==20.0.4
+httpie==2.2.0
+idna==2.10
+isort==4.3.21
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
+mysqlclient==2.0.1
+Pygments==2.6.1
 PyJWT==1.7.1
+pylint==2.5.3
+PyMySQL==0.10.0
+pytz==2020.1
+requests==2.24.0
+six==1.15.0
+sqlparse==0.3.1
+toml==0.10.1
+urllib3==1.25.10
+wrapt==1.12.1
