--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,10 @@ astroid==2.4.2
 certifi==2020.6.20
 chardet==3.0.4
 Django==3.1
-django-anymail==7.2.1
+django-anymail[mailgun]==7.2.1
 django-extensions==3.0.5
 djangorestframework==3.11.1
+django-cors-headers==3.4.0
 gunicorn==20.0.4
 httpie==2.2.0
 idna==2.10
