--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ astroid==2.4.2
 certifi==2020.6.20
 chardet==3.0.4
 Django==3.1
+django-anymail==7.2.1
 django-cors-headers==3.4.0
 django-extensions==3.0.5
+django-mailgun==0.9.1
 djangorestframework==3.11.1
 gunicorn==20.0.4
 httpie==2.2.0
