--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,5 @@ django-extensions==3.0.5
 djangorestframework==3.11.1
 django-anymail[mailgun]==7.2.1
 PyJWT==1.7.1
+django-storages==1.9.1
+Pillow==7.2.0
