--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.2.10
 astroid==2.4.2
 certifi==2020.6.20
 chardet==3.0.4
+boto3==1.14.48
 Django==3.1
 django-anymail==7.2.1
 django-cors-headers==3.4.0
@@ -9,6 +10,7 @@ django-extensions==3.0.5
 django-mailgun==0.9.1
 djangorestframework==3.11.1
 django-storages==1.9.1
+django-storages-redux==1.3.3
 Pillow==7.2.0
 gunicorn==20.0.4
 httpie==2.2.0
